# XPlanning

./: .gitignore  README.md
application/: application.def  run_11.sh  run_llama_test.sh  run_slurm.sh  run_test.sh
application/x_planning/scripts/: llama_test.py
base_env/: base_env.def
python3.10_env/: pyproject.toml  python3.10.def
python3.11_env/: pyproject.toml  python3.11.def
python3.9_env/: pyproject.toml  python3.9.def
