[tool.poetry]
name = "XPlanning"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Paul Effing <paul.effing@hhi.fraunhofer.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas="2.2.3"
numpy="1.26.0"
torch={version="2.1.2", source="pytorch-gpu"}
transformers="4.46.3"
lxt="0.6.1"
dspy="2.5.41"
setuptools = "*"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
